@@ -2,6 +2,10 @@
 
 	* cong-file-properties.c
 
+	Track the modified state of the document; some improvement to dialog cleanup.
+
+	* cong-file-properties.c
+
 	Removed dead code; added debug code to track down the reopened bug #122029 (obscure bug when undoing DTD changes)
 
 	* cong-file-properties.c
